explicit configure option for whether to use clang's include rewriting

--- a/configure.ac
+++ b/configure.ac
@@ -258,22 +258,32 @@ case $host_os in
 esac
 AC_SUBST(LIB_KINFO)
 
-AC_CHECK_PROG(CLANG,clang,clang)
-if test -n "$CLANG"; then
-    AC_MSG_CHECKING([whether clang -Werror works for unknown options])
-    $CLANG -Werror -totallybogusoption -E - >/dev/null 2>/dev/null
-    if test $? -eq 0; then
-        AC_MSG_RESULT(no)
-        # can't detect if the option is supported, but that's too old clang anyway
-    else
-        AC_MSG_RESULT(yes)
-        AC_MSG_CHECKING([for clang -E -frewrite-includes])
-        $CLANG -Werror -E -frewrite-includes - >/dev/null 2>/dev/null
+AC_ARG_ENABLE(clang-rewrite-includes,
+    AS_HELP_STRING([--enable-clang-rewrite-includes],
+        [Use by default Clang's -frewrite-includes option.]))
+
+if test "$enable_clang_rewrite_includes" = "yes"; then
+    AC_DEFINE(HAVE_CLANG_REWRITE_INCLUDES, 1, [Define to 1 if clang supports -frewrite-includes])
+elif test "$enable_clang_rewrite_includes" = "no"; then
+    true  # do not enable
+else
+    AC_CHECK_PROG(CLANG,clang,clang)
+    if test -n "$CLANG"; then
+        AC_MSG_CHECKING([whether clang -Werror works for unknown options])
+        $CLANG -Werror -totallybogusoption -E - >/dev/null 2>/dev/null
         if test $? -eq 0; then
-            AC_MSG_RESULT(yes)
-            AC_DEFINE(HAVE_CLANG_REWRITE_INCLUDES, 1, [Define to 1 if clang supports -frewrite-includes])
-        else
             AC_MSG_RESULT(no)
+            # can't detect if the option is supported, but that's too old clang anyway
+        else
+            AC_MSG_RESULT(yes)
+            AC_MSG_CHECKING([for clang -E -frewrite-includes])
+            $CLANG -Werror -E -frewrite-includes - >/dev/null 2>/dev/null
+            if test $? -eq 0; then
+                AC_MSG_RESULT(yes)
+                AC_DEFINE(HAVE_CLANG_REWRITE_INCLUDES, 1, [Define to 1 if clang supports -frewrite-includes])
+            else
+                AC_MSG_RESULT(no)
+            fi
         fi
     fi
 fi
