--- a/suse/icecream.spec.in
+++ b/suse/icecream.spec.in
@@ -57,7 +57,11 @@ icecream is the next generation distcc.
 %build
 export CFLAGS="$RPM_OPT_FLAGS"
 export CXXFLAGS="$RPM_OPT_FLAGS"
-%configure --libexecdir %_libexecdir
+%configure \
+%if 0%{?suse_version} >= 1230
+    --enable-clang-rewrite-includes \
+%endif
+    --libexecdir %_libexecdir
 make %{?jobs:-j %jobs}
 
 %install
