fix location of suse logfiles
After the switch to make the daemon run as non-root user, it has no rights
to do anything in /var/log . These suse-specific changes were missed
in the commit that did the changes.

--- a/suse/Makefile.am
+++ b/suse/Makefile.am
@@ -8,6 +8,7 @@ EXTRA_DIST = icecream.spec.in \
 initdir=$(sysconfdir)/init.d
 templatesdir=$(localstatedir)/adm/fillup-templates
 icecreamcachedir=$(localstatedir)/cache/icecream
+logdir=$(localstatedir)/log/icecream
 logrotatedir=$(sysconfdir)/logrotate.d
 susefirewallservicesdir=$(sysconfdir)/sysconfig/SuSEfirewall2.d/services
 
@@ -19,6 +20,7 @@ install: init.icecream logrotate SuSEfirewall.iceccd SuSEfirewall.scheduler sysc
 	  mkdir -p $(DESTDIR)$(templatesdir) ;\
 	  $(INSTALL) -m 644 $(srcdir)/sysconfig.icecream $(DESTDIR)$(templatesdir)/sysconfig.icecream ;\
 	  mkdir -p $(DESTDIR)$(icecreamcachedir) ;\
+	  mkdir -p $(DESTDIR)$(logdir) ;\
 	  $(INSTALL) -m 644 -D $(srcdir)/logrotate $(DESTDIR)$(logrotatedir)/icecream ;\
 	  mkdir -p $(DESTDIR)$(susefirewallservicesdir) ;\
 	  $(INSTALL) -m 644 $(srcdir)/SuSEfirewall.iceccd $(DESTDIR)$(susefirewallservicesdir)/iceccd ;\
