--- a/suse/icecream.spec.in
+++ b/suse/icecream.spec.in
@@ -83,8 +83,10 @@ make DESTDIR=$RPM_BUILD_ROOT install
 /usr/sbin/groupadd -r icecream 2> /dev/null || :
 /usr/sbin/useradd -r -g icecream -s /bin/false -c "Icecream Daemon" -d /var/cache/icecream icecream 2> /dev/null || :
 
-%if 0%{?suse_version}
 %post
+# older icecream versions may have left some files owned by root:root in the cache
+rm -rf -- %_localstatedir/cache/icecream/*
+%if 0%{?suse_version}
 %{fillup_and_insserv -n icecream icecream}
 %endif
 
