with cap-ng geteuid() is not a sign of being able to do chroot
And without this, there would be no remote jobs sent to this host.

--- a/services/Makefile.am
+++ b/services/Makefile.am
@@ -5,6 +5,7 @@ lib_LTLIBRARIES = libicecc.la
 libicecc_la_SOURCES = job.cpp comm.cpp getifaddrs.cpp logging.cpp tempfile.c platform.cpp gcc.cpp
 libicecc_la_LIBADD = \
 	../minilzo/libminilzo.la \
+	$(CAPNG_LDADD) \
 	-ldl
 
 libicecc_la_CFLAGS = -fPIC -DPIC
