install clang/clang++ wrappers symlinks conditionally again
The idea to make them unconditional is flawed, as it the clang->icerun symlink
can be easily confused by the real compiler executable (e.g. in configure scripts
checking for the specific compiler), but it doesn't work like one if the real
compiler is not installed. Make them again optional, and add a configure option
to force them.
This reverts commit 517330435ff963d35ea1481dbba8b985aaadfe09 and adds the option.

--- a/client/Makefile.am
+++ b/client/Makefile.am
@@ -29,7 +29,7 @@ install-exec-local:
 	$(LN_S) $(bindir)/icecc $(DESTDIR)$(bindir)/icerun
 
 	$(mkinstalldirs) $(DESTDIR)$(pkglibexecdir)/bin
-	for link in g++ gcc c++ cc clang++ clang; do \
+	for link in g++ gcc c++ cc $(CLANG_SYMLINK_WRAPPERS); do \
 		rm -f $(DESTDIR)$(pkglibexecdir)/bin/$$link ;\
 		$(LN_S) $(bindir)/icecc $(DESTDIR)$(pkglibexecdir)/bin/$$link ;\
 	done
@@ -37,6 +37,6 @@ install-exec-local:
 uninstall-local:
 	rm $(DESTDIR)$(bindir)/icerun
 
-	for link in g++ gcc c++ cc clang++ clang; do \
+	for link in g++ gcc c++ cc $(CLANG_SYMLINK_WRAPPERS); do \
 		rm $(DESTDIR)$(pkglibexecdir)/bin/$$link ;\
 	done
