--- a/configure.ac
+++ b/configure.ac
@@ -14,6 +14,7 @@ m4_define([icecream_version],[icecream_version_major.icecream_version_minor.icec
 # Automake init
 # =============
 AC_INIT([icecc], [icecream_version])
+AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_HEADERS([config.h])
 AM_INIT_AUTOMAKE([1.11 foreign dist-bzip2])
 AM_SILENT_RULES([yes])
