--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 # out-of-tree build
 build/
 # autoconf
-m4/
+m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
 Makefile.in
 aclocal.m4
 autom4te.cache
