make dist-hook work also with srcdir != builddir

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,4 +12,4 @@ SUBDIRS = \
 	compilerwrapper
 
 dist-hook:
-	git log --date=short --pretty="format:@%cd  %an  <%ae>  [%H]%n%n%s%n%n%e%b" | sed -e "s|^\([^@]\)|\t\1|" -e "s|^@||" >$(distdir)/ChangeLog
+	( cd $(top_srcdir) && git log --date=short --pretty="format:@%cd  %an  <%ae>  [%H]%n%n%s%n%n%e%b" | sed -e "s|^\([^@]\)|\t\1|" -e "s|^@||" ) >$(distdir)/ChangeLog
