--- a/scheduler/Makefile.am
+++ b/scheduler/Makefile.am
@@ -1,5 +1,5 @@
-icedir = $(includedir)/icecc
 
 sbin_PROGRAMS = icecc-scheduler
-icecc_scheduler_SOURCES = scheduler.cpp
+icecc_scheduler_SOURCES = compileserver.cpp job.cpp jobstat.cpp scheduler.cpp
 icecc_scheduler_LDADD = ../services/libicecc.la
+icecc_scheduler_CXXFLAGS = -std=c++11
