Added missing headers to fix 'make dist'.

--- a/scheduler/Makefile.am
+++ b/scheduler/Makefile.am
@@ -2,3 +2,9 @@
 sbin_PROGRAMS = icecc-scheduler
 icecc_scheduler_SOURCES = compileserver.cpp job.cpp jobstat.cpp scheduler.cpp
 icecc_scheduler_LDADD = ../services/libicecc.la
+
+noinst_HEADERS = \
+    bench.h \
+    compileserver.h \
+    job.h \
+    jobstat.h
