--- a/configure.ac
+++ b/configure.ac
@@ -73,14 +73,17 @@ AS_IF([test "x$with_man" != "xno"], [
     build_man=yes
     AC_PATH_PROG(DOCBOOK2X,[docbook2x-man])
     AS_IF([test -z "$DOCBOOK2X"], [
-        AC_PATH_PROG(DOCBOOK2X,[docbook-to-man])
+        AC_PATH_PROG(DOCBOOK2X,[docbook2xman])
         AS_IF([test -z "$DOCBOOK2X"], [
-            AC_PATH_PROG(DOCBOOK2X,[docbook2man.pl])
+            AC_PATH_PROG(DOCBOOK2X,[docbook-to-man])
             AS_IF([test -z "$DOCBOOK2X"], [
-                AC_PATH_PROG(DOCBOOK2X,[docbook2man])
+                AC_PATH_PROG(DOCBOOK2X,[docbook2man.pl])
                 AS_IF([test -z "$DOCBOOK2X"], [
-                    AC_MSG_WARN([docbook2x is missing. Install docbook2x package.])
-                    DOCBOOK2X='echo docbook2x is missing. Install docbook2x package.'
+                    AC_PATH_PROG(DOCBOOK2X,[docbook2man])
+                    AS_IF([test -z "$DOCBOOK2X"], [
+                        AC_MSG_WARN([docbook2x is missing. Install docbook2x package.])
+                        DOCBOOK2X='echo docbook2x is missing. Install docbook2x package.'
+                    ])
                 ])
             ])
         ])
