make it possible to explicitly override support for -fdiagnostics-color
Similarly the way it's possible to override -frewrite-includes.
However, there's no way to automatically detect in configure whether
the compiler turns on colors automatically (patched gcc-4.8 in Fedora)
or not (upstream gcc-4.9), because the test would need terminal
as the output, so the default in configure is off.

--- a/configure.ac
+++ b/configure.ac
@@ -328,6 +328,16 @@ else
 fi
 AC_SUBST(CLANG_SYMLINK_WRAPPERS)
 
+AC_ARG_ENABLE(gcc-color-diagnostics,
+    AS_HELP_STRING([--enable-gcc-color-diagnostics],
+        [Assume by default GCC has -fdiagnostics-color=auto option.]))
+
+if test "$enable_gcc_color_diagnostics" = "yes"; then
+    AC_DEFINE(HAVE_GCC_COLOR_DIAGNOSTICS, 1, [Define to 1 if gcc supports -fdiagnostics-color=auto])
+else
+    true  # do not enable
+fi
+
 AC_CONFIG_FILES([ Makefile ])
 AC_CONFIG_FILES([ client/Makefile ])
 AC_CONFIG_FILES([ daemon/Makefile ])
