--- a/configure.ac
+++ b/configure.ac
@@ -48,7 +48,7 @@ if test "$GCC" = yes; then
 -Wshadow -Wpointer-arith $cast_align -Wwrite-strings \
 -Waggregate-return -Wstrict-prototypes -Wmissing-prototypes \
 -Wnested-externs $CFLAGS"
-    CXXFLAGS=" -g -W -Wall -Wpointer-arith $cast_align -Wwrite-strings $CXXFLAGS"
+    CXXFLAGS=" -g -W -Wall -Wshadow -Wpointer-arith $cast_align -Wwrite-strings $CXXFLAGS"
     AC_MSG_NOTICE([Adding gcc options: $CFLAGS])
 fi
 
