'make test' now runs tests
Instead of having to do the steps manually.

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,7 +10,11 @@ SUBDIRS = \
 	doc \
 	suse \
 	compilerwrapper \
-	scheduler
+	scheduler \
+	tests
 
 dist-hook:
 	( cd $(top_srcdir) && git log --date=short --pretty="format:@%cd  %an  <%ae>  [%H]%n%n%s%n%n%e%b" | sed -e "s|^\([^@]\)|\t\1|" -e "s|^@||" ) >$(distdir)/ChangeLog
+
+test: install
+	$(MAKE) -C tests $@
