make gcc-c++ only a Recommends: in the spec file
A machine running only the daemon actually does not need any compiler.

--- a/suse/icecream.spec.in
+++ b/suse/icecream.spec.in
@@ -34,7 +34,7 @@ PreReq:         %insserv_prereq
 %endif
 PreReq:         /usr/sbin/useradd
 PreReq:         /usr/sbin/groupadd
-Requires:       gcc-c++
+Recommends:     gcc-c++
 Requires:       logrotate
 Version:        @VERSION@
 Release:        0
