implement support for -gsplit-dwarf (dwarf fission)
- introduces a protocol bump to 35. the output directory given on the
  command line and whether dwarf fission (-gsplit-dwarf) is enabled are
  now passed in CompileFileMsg; CompileResultMsg now contains whether
  there is a dwo file to receive
- These changes should be backward compatible in both directions (newer
  client and older daemons as well as newer daemons with older clients)
- gcc hard codes the path to the dwo file based on the given output file
  path, which requires some clever path manipulation in the remote
  environment
- the path manipulation is also sufficient for clang to embed the
  correct information

--- a/client/icecc-create-env.in
+++ b/client/icecc-create-env.in
@@ -301,6 +301,8 @@ for extrafile in $extrafiles; do
     add_file $extrafile
 done
 
+add_file /usr/bin/objcopy
+
 if test "$is_darwin" = 1; then
     # add dynamic linker
     add_file /usr/lib/dyld
