--- a/configure.ac
+++ b/configure.ac
@@ -218,6 +218,9 @@ AC_CHECK_LIB(lzo2, lzo1x_1_compress, LZO_LDADD=-llzo2,
 	AC_MSG_ERROR([Could not find lzo2 library - please install lzo-devel]))
 AC_SUBST(LZO_LDADD)
 
+AC_CHECK_LIB([dl], [dlsym], [DL_LDADD=-ldl])
+AC_SUBST([DL_LDADD])
+
 # In DragonFlyBSD daemon needs to be linked against libkinfo.
 case $host_os in
   dragonfly*) LIB_KINFO="-lkinfo" ;;
