Switch travis-ci to building on trusty to add debug fission tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ matrix:
   include:
   - os: linux
     sudo: true # for setcap so we can run the tests in chroot.
+    dist: trusty
   - os: osx
     before_install:
       - brew update
