--- a/client/icecc-create-env.in
+++ b/client/icecc-create-env.in
@@ -6,18 +6,11 @@
 
 target_files=
 
-is_darwin=0
-if test `uname` = Darwin; then
-  is_darwin=1
-fi
-is_freebsd=0
-if test `uname` = FreeBSD; then
-  is_freebsd=1
-fi
-is_linux=0
-if test `uname` = Linux; then
-  is_linux=1
-fi
+case `uname` in
+    "Darwin") is_darwin=1;;
+    "FreeBSD") is_freebsd=1;;
+    "Linux") is_linux=1;;
+esac
 
 usage ()
 {
