--- a/client/icecc-create-env.in
+++ b/client/icecc-create-env.in
@@ -28,6 +28,16 @@ is_contained ()
   esac
 }
 
+# Avoid /../ components in paths such as /usr/X11/../lib64 .
+# This could use realpath, but that's reportedly not that widely available.
+convert_path_cdup ()
+{
+  local filename="$1"
+  local directory=`dirname $filename`
+  local fixed_directory=`cd "$directory" >/dev/null && pwd -P`
+  echo ${fixed_directory}/`basename $filename`
+}
+
 add_file ()
 {
   local name="$1"
@@ -39,6 +49,8 @@ add_file ()
   # ls -H isn't really the same as readlink, but
   # readlink is not portable enough.
   path=`ls -H $path`
+  name=`convert_path_cdup $name`
+  path=`convert_path_cdup $path`
   toadd="$name=$path"
   if test "$name" = "$path"; then
     toadd=$path
