do not run binaries from the build directory when running tests
This reverts the logic from ceeff64cfb and b654aa1690. The tests are meant
to run from the installation instead from the build, in order to check
the installed setup as closely as possible. Moreover, the second commit
here basically reverted the first by adding more complexity on top, instead
of reverting it as such.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -6,9 +6,8 @@ test-strict: test-full-strict
 
 test-prepare:
 	if test -x /sbin/setcap; then \
-	    sudo /sbin/setcap cap_sys_chroot+ep ${builddir}/../daemon/iceccd cap_sys_chroot+ep ${sbindir}/iceccd ; \
+	    sudo /sbin/setcap cap_sys_chroot+ep ${sbindir}/iceccd ; \
 	elif which filecap >/dev/null 2>/dev/null; then \
-	    sudo filecap ${builddir}/../daemon/iceccd sys_chroot ; \
 	    sudo filecap ${sbindir}/iceccd sys_chroot ; \
 	else \
 	    exit 1 ; \
