make it possible to sort of specify the clang used for tests
Code for icecc --create-native actually has /usr/bin/clang hardcoded,
so no point (for now) trying to use a different clang, but this
should at least help setting up complete tests for Travis and making
sure the clang plugin is built correctly.

--- a/tests/test-setup.sh.in
+++ b/tests/test-setup.sh.in
@@ -2,3 +2,7 @@
 
 # Needed for locating our compiler wrapper symlinks.
 pkglibexecdir=@PKGLIBEXECDIR@
+
+# Hardcoded paths to the actual compilers.
+CLANG=@CLANG@
+CLANGXX=@CLANGXX@
