rework how test.sh selects the compiler
- $TESTCC and $TESTCXX may be used to explicitly specify the compiler
- otherwise try to find a suitable one
- do not search for the compiler in configure
- build the clang plugin in test.sh instead of configure+Makefile
- run all tests with just one compiler

--- a/configure.ac
+++ b/configure.ac
@@ -195,23 +195,7 @@ case $host_os in
 esac
 AC_SUBST(LIB_KINFO)
 
-# Note that icecream currently uses a hardcoded /usr/bin/{gcc|g++|clang} path
-# in some places (creating native environment), so using compilers
-# in a different location is currently tricky.
-if test -z "$CLANG"; then
-    CLANG=/usr/bin/clang
-fi
-if test -z "$CLANGXX"; then
-    CLANGXX=/usr/bin/clang++
-fi
-if test -z "$LLVM_CONFIG"; then
-    LLVM_CONFIG=/usr/bin/llvm-config
-fi
-AC_CHECK_PROG(CLANG,$CLANG,$CLANG)
-AC_CHECK_PROG(CLANGXX,$CLANGXX,$CLANGXX)
-AC_CHECK_PROG(LLVM_CONFIG,$LLVM_CONFIG,$LLVM_CONFIG)
-AC_SUBST(CLANG)
-AC_SUBST(CLANGXX)
+AC_CHECK_PROG(CLANG,clang,clang)
 
 AC_ARG_ENABLE(clang-rewrite-includes,
     AS_HELP_STRING([--enable-clang-rewrite-includes],
@@ -241,33 +225,6 @@ else
         fi
     fi
 fi
-
-HAVE_CLANG_DEVEL_DEP=
-LLVM_CXXFLAGS=
-if test -n "$CLANGXX"; then
-    AC_MSG_CHECKING([Clang version])
-    clang_version=`$CLANGXX --version`
-    AC_MSG_RESULT([$clang_version])
-    LLVM_CXXFLAGS="-D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS"
-    if test -n "$LLVM_CONFIG"; then
-        LLVM_CXXFLAGS=`$LLVM_CONFIG --cxxflags`
-    fi
-    AC_LANG_PUSH([C++])
-    save_CPPFLAGS=$CPPFLAGS
-    save_CXXCPP=$CXXCPP
-    save_CXX=$CXX
-    CPPFLAGS="$CPPFLAGS $LLVM_CXXFLAGS"
-    CXXCPP="$CLANGXX -E"
-    CXX=$CLANGXX
-    AC_CHECK_HEADER(clang/AST/RecursiveASTVisitor.h,
-        [ HAVE_CLANG_DEVEL_DEP=clangplugin ] )
-    CPPFLAGS="$save_CPPFLAGS"
-    CXXCPP="$save_CXXCPP"
-    CXX="$save_CXX"
-    AC_LANG_POP([C++])
-fi
-AC_SUBST(HAVE_CLANG_DEVEL_DEP)
-AC_SUBST(LLVM_CXXFLAGS)
 
 AC_ARG_ENABLE(clang-wrappers,
     AS_HELP_STRING([--enable-clang-wrappers],
