Revert "require that a Travis build does all tests"
Too strict for now. I'll redo this differently later.
This reverts commit dfe3970cef732293679038a6bfd2200bc54723ff.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ script:
   - ./autogen.sh
   - ./configure --prefix=$PWD/_inst
   - make
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then make test-strict; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then make test; fi
 
 matrix:
   include:
