--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: cpp
 
 script:
-# Only the clang(-3.4) package provide /usr/bin/clang, but this path is hardcoded in icecream.
-# So for now make icecream use this newer version.
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo ln -s /usr/bin/clang-3.9 /usr/bin/clang; sudo ln -s /usr/bin/clang++-3.9 /usr/bin/clang++; export LLVM_CONFIG=/usr/bin/llvm-config-3.9; fi
   - ./autogen.sh
   - ./configure --prefix=$PWD/_inst
   - make
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then make test; fi
+# Only the clang(-3.4) package provides /usr/bin/clang, but this path is hardcoded in icecream.
+# So for now make icecream use this newer version.
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo ln -s /usr/bin/clang-3.9 /usr/bin/clang; sudo ln -s /usr/bin/clang++-3.9 /usr/bin/clang++; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then make test TESTCC=/usr/bin/gcc TESTCXX=/usr/bin/g++; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then make test TESTCC=/usr/bin/clang TESTCXX=/usr/bin/clang++ LLVM_CONFIG=/usr/bin/llvm-config-3.9; fi
 
 matrix:
   include:
@@ -70,6 +71,7 @@ before_script:
 addons:
   apt:
     packages:
+    - gcc
     - clang-3.9
     - libclang-3.9-dev
     - llvm-3.9-dev
